@@ -1,7 +1,10 @@
-2018-08-08 (0.12.14)
+2018-09-30 (0.12.14)
+	COMMON: fix broken implementation to avoid appending multiple kwTYPE_EOCs (or kwTYPE_LINE)
+
+2018-09-23 (0.12.14)
 	COMMON: fix error message when command "LINE INPUT" attempts to read a non open file
 
-2018-08-08 (0.12.14)
+2018-09-23 (0.12.14)
 	COMMON: fix crash when attempting to load an image from a failed network connection
 
 2018-08-08 (0.12.13)
